--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Kaleidoscope/BuildingAJIT/ChapterA/test/test.xcodeproj/xcuserdata/palance.xcuser
 Kaleidoscope/BuildingAJIT/ChapterA/test/test.xcodeproj/project.xcworkspace/xcuserdata/palance.xcuserdatad/UserInterfaceState.xcuserstate
 Kaleidoscope/BuildingAJIT/ChapterA/test/test.xcodeproj/project.pbxproj
 Kaleidoscope/BuildingAJIT/ChapterA/test/test/main.ll
+Kaleidoscope/BuildingAJIT/ChapterA/test/test/main.bc
